@@ -17,8 +17,8 @@
 
 
 # gnulib modules used by this package.
-gnulib_modules="alloca atexit btowc dirent error fnmatch getopt-gnu \
-  getpagesize gettext locale malloc mbrlen mbrtowc memchr memmove \
+gnulib_modules="alloca atexit binary-io btowc dirent dirname error fnmatch \
+  getopt-gnu getpagesize gettext locale malloc mbrlen mbrtowc memchr memmove \
   mempcpy obstack quotearg realloc ssize_t stpcpy stddef stdlib strerror \
   string strtol strtoul strtoull sys_stat unistd wchar wcrtomb wctype \
   xalloc xstrtoumax"
